--- a/Harshini_Raju/iris_dataset.ipynb
+++ b/Harshini_Raju/iris_dataset.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
     "from sklearn.naive_bayes import GaussianNB\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis\n",
+    "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis as LDA\n",
     "from sklearn.svm import SVC\n",
     "#setting the working file\n",
     "import os\n",
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
        "(150, 5)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
        "Index(['sepallength', 'sepalwidth', 'petallength', 'petalwidth', 'class'], dtype='object')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
        "4          5.0         3.6          1.4         0.2  Iris-setosa"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -249,19 +249,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Iris-setosa        50\n",
-       "Iris-virginica     50\n",
        "Iris-versicolor    50\n",
+       "Iris-virginica     50\n",
+       "Iris-setosa        50\n",
        "Name: class, dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -386,7 +386,7 @@
        "max       7.900000    4.400000     6.900000    2.500000"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {
     "scrolled": true
    },
@@ -818,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -872,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -984,7 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {
     "scrolled": true
    },
@@ -1025,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {
     "scrolled": true
    },
@@ -1060,16 +1060,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1cd546fb4a8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1d301db4e10>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1099,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1128,7 +1128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1139,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 25,
    "metadata": {
     "scrolled": true
    },
@@ -1150,7 +1150,7 @@
        "((105, 4), (45, 4), (105, 1), (45, 1))"
       ]
      },
-     "execution_count": 197,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1161,7 +1161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1179,7 +1179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 27,
    "metadata": {
     "scrolled": true
    },
@@ -1189,7 +1189,7 @@
      "output_type": "stream",
      "text": [
       "['Iris-virginica' 'Iris-versicolor' 'Iris-setosa' 'Iris-versicolor'\n",
-      " 'Iris-versicolor' 'Iris-setosa' 'Iris-virginica' 'Iris-versicolor'\n",
+      " 'Iris-versicolor' 'Iris-setosa' 'Iris-versicolor' 'Iris-versicolor'\n",
       " 'Iris-setosa' 'Iris-versicolor' 'Iris-virginica' 'Iris-versicolor'\n",
       " 'Iris-setosa' 'Iris-virginica' 'Iris-setosa' 'Iris-versicolor'\n",
       " 'Iris-virginica' 'Iris-virginica' 'Iris-setosa' 'Iris-setosa'\n",
@@ -1201,19 +1201,19 @@
       " 'Iris-virginica' 'Iris-versicolor' 'Iris-virginica' 'Iris-virginica'\n",
       " 'Iris-versicolor']\n",
       "\n",
-      " 0.8666666666666667\n",
+      " 0.8888888888888888\n",
       "                 precision    recall  f1-score   support\n",
       "\n",
       "    Iris-setosa       1.00      1.00      1.00        12\n",
-      "Iris-versicolor       0.78      0.88      0.82        16\n",
-      " Iris-virginica       0.87      0.76      0.81        17\n",
+      "Iris-versicolor       0.79      0.94      0.86        16\n",
+      " Iris-virginica       0.93      0.76      0.84        17\n",
       "\n",
-      "      micro avg       0.87      0.87      0.87        45\n",
-      "      macro avg       0.88      0.88      0.88        45\n",
-      "   weighted avg       0.87      0.87      0.87        45\n",
+      "      micro avg       0.89      0.89      0.89        45\n",
+      "      macro avg       0.91      0.90      0.90        45\n",
+      "   weighted avg       0.90      0.89      0.89        45\n",
       "\n",
       "[[12  0  0]\n",
-      " [ 0 14  2]\n",
+      " [ 0 15  1]\n",
       " [ 0  4 13]]\n"
      ]
     }
@@ -1239,7 +1239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 28,
    "metadata": {
     "scrolled": false
    },
@@ -1299,40 +1299,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Iris-versicolor' 'Iris-versicolor' 'Iris-setosa' 'Iris-versicolor'\n",
-      " 'Iris-versicolor' 'Iris-setosa' 'Iris-versicolor' 'Iris-versicolor'\n",
-      " 'Iris-setosa' 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor'\n",
-      " 'Iris-setosa' 'Iris-virginica' 'Iris-setosa' 'Iris-versicolor'\n",
+      "['Iris-virginica' 'Iris-versicolor' 'Iris-setosa' 'Iris-versicolor'\n",
+      " 'Iris-virginica' 'Iris-setosa' 'Iris-versicolor' 'Iris-versicolor'\n",
+      " 'Iris-setosa' 'Iris-versicolor' 'Iris-virginica' 'Iris-versicolor'\n",
+      " 'Iris-setosa' 'Iris-virginica' 'Iris-setosa' 'Iris-virginica'\n",
       " 'Iris-virginica' 'Iris-virginica' 'Iris-setosa' 'Iris-setosa'\n",
       " 'Iris-versicolor' 'Iris-virginica' 'Iris-versicolor' 'Iris-versicolor'\n",
-      " 'Iris-virginica' 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor'\n",
+      " 'Iris-virginica' 'Iris-virginica' 'Iris-versicolor' 'Iris-versicolor'\n",
       " 'Iris-virginica' 'Iris-virginica' 'Iris-virginica' 'Iris-versicolor'\n",
       " 'Iris-setosa' 'Iris-virginica' 'Iris-versicolor' 'Iris-setosa'\n",
       " 'Iris-setosa' 'Iris-setosa' 'Iris-setosa' 'Iris-virginica'\n",
       " 'Iris-virginica' 'Iris-versicolor' 'Iris-virginica' 'Iris-virginica'\n",
       " 'Iris-versicolor']\n",
       "\n",
-      " 0.9111111111111111\n",
+      " 0.9333333333333333\n",
       "                 precision    recall  f1-score   support\n",
       "\n",
       "    Iris-setosa       1.00      1.00      1.00        12\n",
-      "Iris-versicolor       0.80      1.00      0.89        16\n",
-      " Iris-virginica       1.00      0.76      0.87        17\n",
+      "Iris-versicolor       0.93      0.88      0.90        16\n",
+      " Iris-virginica       0.89      0.94      0.91        17\n",
       "\n",
-      "      micro avg       0.91      0.91      0.91        45\n",
-      "      macro avg       0.93      0.92      0.92        45\n",
-      "   weighted avg       0.93      0.91      0.91        45\n",
+      "      micro avg       0.93      0.93      0.93        45\n",
+      "      macro avg       0.94      0.94      0.94        45\n",
+      "   weighted avg       0.93      0.93      0.93        45\n",
       "\n",
       "[[12  0  0]\n",
-      " [ 0 16  0]\n",
-      " [ 0  4 13]]\n"
+      " [ 0 14  2]\n",
+      " [ 0  1 16]]\n"
      ]
     }
    ],
@@ -1345,7 +1345,7 @@
     "print(y_pred)\n",
     "print(\"\\n\", y_accuracy)\n",
     "print( classification_report(y_test, y_pred) )\n",
-    "print(cm)"
+    "print(cm)\n"
    ]
   },
   {
@@ -1357,7 +1357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1415,7 +1415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1468,29 +1468,77 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Model Selection**"
+    "**Linear Discriminant Analysis**\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "LR: 0.970909 (0.063089)\n",
+      "\n",
+      " 0.9777777777777777\n",
+      "                 precision    recall  f1-score   support\n",
+      "\n",
+      "    Iris-setosa       1.00      1.00      1.00        12\n",
+      "Iris-versicolor       1.00      0.94      0.97        16\n",
+      " Iris-virginica       0.94      1.00      0.97        17\n",
+      "\n",
+      "      micro avg       0.98      0.98      0.98        45\n",
+      "      macro avg       0.98      0.98      0.98        45\n",
+      "   weighted avg       0.98      0.98      0.98        45\n",
+      "\n",
+      "[[12  0  0]\n",
+      " [ 0 15  1]\n",
+      " [ 0  0 17]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "lda =LDA(n_components=2)\n",
+    "x_train= lda.fit_transform(x_train, y_train.values.ravel())\n",
+    "x_test= lda.transform(x_test)\n",
+    "classifier= LogisticRegression(solver='lbfgs',multi_class='auto')\n",
+    "classifier.fit(x_train, y_train.values.ravel())\n",
+    "y_pred=classifier.predict(x_test)\n",
+    "y_accuracy=accuracy_score(y_test, y_pred)\n",
+    "cm=confusion_matrix(y_test,y_pred)\n",
+    "print(\"\\n\",y_accuracy)\n",
+    "print( classification_report(y_test, y_pred) )\n",
+    "print(cm)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Model Selection**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LR: 0.980000 (0.040000)\n",
       "LDA: 0.980000 (0.040000)\n",
-      "KNN: 0.940909 (0.065839)\n",
-      "CART: 0.950909 (0.066457)\n",
-      "NB: 0.980909 (0.038236)\n",
+      "KNN: 0.960909 (0.047941)\n",
+      "CART: 0.920909 (0.097832)\n",
+      "NB: 0.980000 (0.040000)\n",
       "SVM: 0.970909 (0.044499)\n"
      ]
     }
    ],
    "source": [
-    "models=[('LR', LogisticRegression(solver='lbfgs',multi_class='auto')),('LDA', LinearDiscriminantAnalysis()),('KNN', KNeighborsClassifier()),\n",
+    "models=[('LR', LogisticRegression(solver='lbfgs',multi_class='auto')),('LDA', LDA()),('KNN', KNeighborsClassifier()),\n",
     "       ('CART', DecisionTreeClassifier()),('NB', GaussianNB()),('SVM', SVC(gamma='auto'))]\n",
     "names=[]\n",
     "results=[]\n",
@@ -1508,20 +1556,6 @@
    "source": [
     "**Gaussian Naive Bayes** model  has the most accuracy out of all the models."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
